Fix maxItem parameters for stack and recipe APIs